--- a/waizly-crud-products/composer.json
+++ b/waizly-crud-products/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
-        "tymon/jwt-auth": "^2.1"
+        "php-open-source-saver/jwt-auth": "1.4.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
